Optimised for seo indexing

--- a/client/index.html
+++ b/client/index.html
@@ -1,34 +1,121 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/Professional.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Md Munna | Software Engineer</title>
 
-  <script type="text/javascript">
-    (function(l) {
-      if (l.search[1] === '/' ) {
-        var decoded = l.search.slice(1).split('&').map(function(s) { 
-          return s.replace(/~and~/g, '&')
-        }).join('?');
-        window.history.replaceState(null, null,
-            l.pathname.slice(0, -1) + decoded + l.hash
-        );
-      }
-    }(window.location))
-  </script>
-  </head>
-    <title>Md Munna | Engineer</title>
-  </head>
-  <body>
+    <title>Md Munna | Full Stack Software Engineer</title>
+    <meta name="description" content="Portfolio of Md Munna, a Full Stack Software Engineer with expertise in Java, React.js, Node.js, and building end-to-end web applications." />
+    <meta name="author" content="Md Munna" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://mdmunna.xyz/" />
+    <meta http-equiv="Content-Language" content="en" />
+
+
+    <meta name="geo.region" content="IN-BR" />
+    <meta name="geo.placename" content="Patna, Bihar, India" />
+
+
+    <meta property="og:title" content="Md Munna | Full Stack Software Engineer" />
+    <meta property="og:description" content="Portfolio of Md Munna, a Full Stack Software Engineer with expertise in Java, React.js, Node.js, and building end-to-end web applications." />
+    <meta property="og:url" content="https://mdmunna.xyz/" />
+    <meta property="og:site_name" content="Md Munna's Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:image" content="https://mdmunna.xyz/Professional.png" />
+    <meta property="og:image:alt" content="A professional headshot of Md Munna, Software Engineer" />
+
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@mdmunna84880" />
+    <meta name="twitter:title" content="Md Munna | Full Stack Software Engineer" />
+    <meta name="twitter:description" content="Portfolio of Md Munna, a Full Stack Software Engineer with expertise in Java, React.js, Node.js, and building end-to-end web applications." />
+    <meta name="twitter:url" content="https://mdmunna.xyz/" />
+    <meta name="twitter:image" content="https://mdmunna.xyz/Professional.png" />
+    <meta name="twitter:image:alt" content="A professional headshot of Md Munna, Software Engineer" />
+
+
+    <link rel="icon" type="image/png" href="/Professional.png" />
+    <link rel="apple-touch-icon" href="/Professional.png" />
+    <meta name="theme-color" content="#0f172a" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Md Munna" />
+    <meta name="mobile-web-app-capable" content="yes" />
+
+
+    <link rel="me" href="https://github.com/mdmunna84880" />
+    <link rel="me" href="https://www.linkedin.com/in/mdmunna84880" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
+
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Md Munna",
+      "url": "https://mdmunna.xyz/",
+      "image": "https://mdmunna.xyz/Professional.png",
+      "sameAs": [
+        "https://www.linkedin.com/in/mdmunna84880",
+        "https://github.com/mdmunna84880",
+        "https://x.com/Xmdmunna84880"
+      ],
+      "jobTitle": "Full Stack Software Engineer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "AlmaBetter"
+      },
+      "alumniOf": [
+        {
+          "@type": "CollegeOrUniversity",
+          "name": "Gandhi Engineering College, Bhubaneswar"
+        },
+        {
+          "@type": "CollegeOrUniversity",
+          "name": "C.N. College, Sahebganj, Muzaffarpur"
+        }
+      ],
+      "knowsAbout": ["Java", "React.js", "Node.js", "JavaScript", "Full Stack Development", "MongoDB", "SQL", "Express.js", "RESTful APIs", "OOP", "DSA"],
+      "knowsLanguage": [
+        {
+          "@type": "Language",
+          "name": "English",
+          "description": "Proficient"
+        },
+        {
+          "@type": "Language",
+          "name": "Hindi",
+          "description": "Native Speaker"
+        }
+      ],
+      "hasCredential": [
+        {
+          "@type": "EducationalOccupationalCredential",
+          "name": "DSA with JAVA",
+          "offeredBy": { "name": "Apna College" }
+        },
+        {
+          "@type": "EducationalOccupationalCredential",
+          "name": "Full Stack Web Development",
+          "offeredBy": { "name": "Apna College" }
+        }
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Patna",
+        "addressRegion": "Bihar",
+        "addressCountry": "IN"
+      },
+      "email": "mdmunna19434@gmail.com",
+      "telephone": "+91-7050498963"
+    }
+    </script>
+</head>
+<body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
 </html>
