Image and Make more seo friendly for the engineer

--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Md Munna | Full Stack Software Engineer</title>
-    <meta name="description" content="Portfolio of Md Munna, a Full Stack Software Engineer with expertise in Java, React.js, Node.js, and building end-to-end web applications." />
+    <title>Md Munna | Engineer</title>
+    <meta name="description" content="Portfolio of Md Munna, an Engineer with expertise in Java, Next.js React.js, Node.js, and building end-to-end applications." />
     <meta name="author" content="Md Munna" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://mdmunna.xyz/" />
@@ -16,23 +16,23 @@
     <meta name="geo.placename" content="Patna, Bihar, India" />
 
 
-    <meta property="og:title" content="Md Munna | Full Stack Software Engineer" />
-    <meta property="og:description" content="Portfolio of Md Munna, a Full Stack Software Engineer with expertise in Java, React.js, Node.js, and building end-to-end web applications." />
+    <meta property="og:title" content="Md Munna | Engineer" />
+    <meta property="og:description" content="Portfolio of Md Munna, an Engineer with expertise in Java, Next.js, React.js, Node.js, and building end-to-end applications." />
     <meta property="og:url" content="https://mdmunna.xyz/" />
     <meta property="og:site_name" content="Md Munna's Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="https://mdmunna.xyz/Professional.png" />
-    <meta property="og:image:alt" content="A professional headshot of Md Munna, Software Engineer" />
+    <meta property="og:image" content="https://mdmunna.xyz/preview-image.png" />
+    <meta property="og:image:alt" content="A professional headshot of Md Munna, Engineer" />
 
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@mdmunna84880" />
-    <meta name="twitter:title" content="Md Munna | Full Stack Software Engineer" />
-    <meta name="twitter:description" content="Portfolio of Md Munna, a Full Stack Software Engineer with expertise in Java, React.js, Node.js, and building end-to-end web applications." />
+    <meta name="twitter:title" content="Md Munna | Engineer" />
+    <meta name="twitter:description" content="Portfolio of Md Munna, an Engineer with expertise in Java, Next.js React.js, Node.js, and building end-to-end applications." />
     <meta name="twitter:url" content="https://mdmunna.xyz/" />
-    <meta name="twitter:image" content="https://mdmunna.xyz/Professional.png" />
-    <meta name="twitter:image:alt" content="A professional headshot of Md Munna, Software Engineer" />
+    <meta name="twitter:image" content="https://mdmunna.xyz/preview-image.png" />
+    <meta name="twitter:image:alt" content="A professional headshot of Md Munna, Engineer" />
 
 
     <link rel="icon" type="image/png" href="/Professional.png" />
@@ -57,13 +57,13 @@
       "@type": "Person",
       "name": "Md Munna",
       "url": "https://mdmunna.xyz/",
-      "image": "https://mdmunna.xyz/Professional.png",
+      "image": "https://mdmunna.xyz/preview-image.png",
       "sameAs": [
         "https://www.linkedin.com/in/mdmunna84880",
         "https://github.com/mdmunna84880",
         "https://x.com/Xmdmunna84880"
       ],
-      "jobTitle": "Full Stack Software Engineer",
+      "jobTitle": "Software Engineer",
       "worksFor": {
         "@type": "Organization",
         "name": "AlmaBetter"
@@ -78,7 +78,7 @@
           "name": "C.N. College, Sahebganj, Muzaffarpur"
         }
       ],
-      "knowsAbout": ["Java", "React.js", "Node.js", "JavaScript", "Full Stack Development", "MongoDB", "SQL", "Express.js", "RESTful APIs", "OOP", "DSA"],
+      "knowsAbout": ["Java", "Next.js", "React.js", "Node.js", "JavaScript", "Full Stack Development", "MongoDB", "SQL", "Express.js", "RESTful APIs", "OOP", "DSA"],
       "knowsLanguage": [
         {
           "@type": "Language",
